# T-Rex-Dino-Bot

./: README.md  pyproject.toml
src/trex_dino_bot/: __init__.py  agent.py  config.py  env.py  main.py  models.py  replay_buffer.py
tests/: test_agent.py  test_env.py
