[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trex-dino-bot"
version = "0.1.0"
description = "T-Rex Dino game bot using Deep Q-Learning (DQN) with a custom pygame environment."
authors = [
  { name = "Mobin Yousefi", email = "mobin@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "pygame>=2.5",
]

[project.urls]
Homepage = "https://github.com/mobinyousefi-cs/trex-dino-bot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
